#572 - Fix layout so that ‘Order by’ dropdown items are not cropped.

--- a/assets/css/sass/_genes.sass
+++ b/assets/css/sass/_genes.sass
@@ -385,14 +385,14 @@
 #order-by-label
   margin-left: 20px
   margin-right: 4px
-  margin-top: 8px
+  margin-top: 0px
   display: inline-block
 
 #select-gene-container
   display: inline-block
   width: 110px
   vertical-align: middle
-  margin-top: 4px
+  margin-top: 8px
 
   .selectize-input
     padding-bottom: 2px
